@@ -1,0 +1,143 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <style>
+            .navbar{
+                overflow: hidden;
+                background-color: #e88080;
+                font-family: Arial;
+                }
+            .navbar a{
+                float: left;
+                font-size: 16px;
+                color: white;
+                text-align: center;
+                padding: 14px 16px;
+                text-decoration: none;
+            }
+            .dropdown {
+                float: left;
+                overflow: hidden;
+            }
+            .dropdown .dropbtn {
+                font-size: 16px;
+                border: none;
+                outline: none;
+                color: white;
+                padding: 14px 16px;
+                background-color: inherit;
+                font-family: inherit;
+                margin: 0;
+            }
+            .navbar a:hover, .dropdown:hover .dropbtn {
+                background-color: rgb(249, 97, 97);
+            }
+            .dropdown-content {
+                display: none;
+                position: absolute;
+                background-color: #f9f9f9;
+                min-width: 160px;
+                box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+                z-index: 1;
+            }
+            .dropdown-content a {
+                float: none;
+                color: black;
+                padding: 12px 16px;
+                text-decoration: none;
+                display: block;
+                text-align: left;
+            }
+            .dropdown:hover .dropdown-content {
+                display: block;
+            }
+            .Footer{
+            font-size: 15px;
+            color: rgb(44, 44, 44);
+            padding: 30px;
+            margin: auto;
+            border: 0px;
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: #e88282;
+                
+        }
+        .Footer_row_1{
+            font-weight: bold;
+            font-size: 20px;
+            text-align: center;
+            margin: auto;
+            padding-top: 25px;
+            padding-bottom: 25px;
+        }
+        .Footer_container{
+            color: rgb(78, 78, 78);
+            text-align: center;
+            padding-left: 200px;
+            padding-right: 200px;
+            margin: auto;
+            text-decoration: none;
+        }
+        #Copyright{
+            text-align: center;
+           font-size: 20px;
+            color: rgb(44, 44, 44);
+            padding-top: 50px;
+           font-weight: bold;
+        }
+        #Body_Title{
+            font-size: 50px;
+            font-weight: bolder;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        </style>
+        <title></title>
+    </head>
+
+    <body>
+    <!--Navbar-->
+    <div class="navbar">
+        <a href="homepage.html">Home</a>
+        <div class="dropdown">
+          <button class="dropbtn">Groupbuys/Pre-Order
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <a href="neo80.html">Neo 80</a>
+            <a href="qk80.html">QK80</a>
+            <a href="luminkey80.html">Luminkey 80</a>
+            <a href="coming soon.html">More coming soon!</a>
+          </div>
+        </div>
+        <a href="about us.html">About us</a>
+        <a href="contact us.html">Contact us</a>
+    </div>
+    <!--Body contents-->
+    <div>
+
+    </div>
+    <!--Footer-->
+    <div class="Footer">
+        <table class="Footer">
+            <tr class="Footer" class="Footer_row_1">
+                <td class="Footer_row_1">Policies</td>
+                <td class="Footer_row_1">Connect with us</td>
+            </tr>
+            <tr class="Footer">
+                <td><a href="TOS.html" class="Footer_container">Terms of service</a></td>
+                <td><a href="contact_us.html" class="Footer_container">Contact Us</a></td>
+            </tr>
+            <tr class="Footer">
+                <td><a href="Policies.html" class="Footer_container">Privacy Policy</a></td>
+               <td><a href="contact_us.html" class="Footer_container">Stores</a></td>
+            </tr>
+            <tr class="Footer">
+                <td><a href="TOS.html" class="Footer_container">Refund Policy</a></td>
+                <td><a href="contact_us.html" class="Footer_container">Careers</a></td>
+            </tr>
+            <tr class="Footer">
+                <td colspan="2"><a id="Copyright">&copy; Fragrance Keebs inc. 2024</a></td>
+            </tr>
+        </table>
+    </div>
+    </body>
+</html>
