@@ -27,4 +27,7 @@ Helo pls log all changes here tyyyyyyyy or your gae
     - Overhauled homepage.html style
     - Ported over navbar and footer into all htmls
 
+18/6/24 3:47 - Zen
+    - Made a template so yall can use if uw make new page. Just copy this and fill the body contents under the contents comment
+
 
